--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.0'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id "com.diffplug.spotless" version "6.23.3"
 }
 
 group = 'carametal'
@@ -9,6 +10,12 @@ version = '0.0.1-SNAPSHOT'
 
 java {
 	sourceCompatibility = '21'
+}
+
+spotless {
+	java {
+		googleJavaFormat()
+	}
 }
 
 repositories {
