--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
       - POSTGRES_PASSWORD=postgres
     volumes:
       - todo-list-data:/var/lib/postgresql/data
+      - ./docker/postgres/init:/docker-entrypoint-initdb.d
 
 volumes:
   todo-list-data:
+    external: true
