--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import com.github.spotbugs.snom.Effort
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.0'
@@ -17,6 +19,10 @@ spotless {
 	java {
 		googleJavaFormat()
 	}
+}
+
+spotbugs {
+	effort = Effort.MAX
 }
 
 repositories {
