--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   db:
     image: postgres:16.1-bookworm
-    container_name: todo-postgres
+    container_name: todo-db
     ports:
       - "5432:5432"
     environment:
@@ -12,6 +12,18 @@ services:
     volumes:
       - todo-list-data:/var/lib/postgresql/data
       - ./docker/postgres/init:/docker-entrypoint-initdb.d
+
+  testdb:
+    image: postgres:16.1-bookworm
+    container_name: todo-test-db
+    ports:
+      - "5433:5432"
+    environment:
+      - POSTGRES_DB=todo_list
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    volumes:
+      - ./docker/postgres/init/01_init.sql:/docker-entrypoint-initdb.d/01_init.sql
 
 volumes:
   todo-list-data:
