ci環境でのテストエラーの解消のためにDDLをcircleci用のコンフィグファイルに追加

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
           - POSTGRES_DB=todo_list
           - POSTGRES_USER=postgres
           - POSTGRES_PASSWORD=postgres
+        volumes:
+        - ./docker/postgres/init/01_init.sql:/docker-entrypoint-initdb.d/01_init.sql
     
     steps:
       - checkout
