--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,6 @@ flyway {
 	url = 'jdbc:postgresql://localhost:5432/todo_list'
 	user = 'postgres'
 	password = 'postgres'
-	// locations = ['classpath:db/migration']
 }
 
 repositories {
@@ -47,6 +46,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.flywaydb:flyway-core:10.2.0'
+	implementation 'org.flywaydb:flyway-database-postgresql:10.2.0'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
 	compileOnly 'org.projectlombok:lombok'
@@ -59,4 +60,5 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	systemProperty 'spring.profiles.active', 'test'
 }
