circleciの設定にdockerコンテナを使う設定を追加

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
     
     steps:
       - checkout
+      - setup_remote_docker
       - run:
           name: "Grant execute permission to Gradlew"
           command: "chmod +x ./gradlew"
