--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,11 @@ services:
       - POSTGRES_PASSWORD=postgres
     volumes:
       - todo-list-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U your_user -d your_database"]
+      interval: 5s
+      timeout: 5s
+      retries: 20
 
 volumes:
   todo-list-data:
