gradleをcircleciでキャッシュする設定を追加

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,12 +14,20 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
+      - restore_cache:
+          keys:
+            - gradle-{{ checksum "build.gradle" }}v
       - run:
           name: "Grant execute permission to Gradlew"
           command: "chmod +x ./gradlew"
       - run:
           name: Build
           command: "./gradlew clean build"
+      - save_cache:
+          key: gradle-{{ checksum "build.gradle" }}
+          paths:
+            - ~/.gradle/caches
+            - ~/.gradle/wrapper
 
 workflows:
   build-workflow:
