--- a/build.gradle
+++ b/build.gradle
@@ -53,9 +53,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-	testImplementation "org.testcontainers:testcontainers:1.19.3"
-	testImplementation "org.testcontainers:junit-jupiter:1.19.3"
-	testImplementation "org.testcontainers:postgresql:1.19.3"
+	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+	testImplementation 'org.testcontainers:junit-jupiter'
+	testImplementation "org.testcontainers:postgresql"
 }
 
 tasks.named('test') {
