--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ flyway {
 	url = 'jdbc:postgresql://localhost:5432/todo_list'
 	user = 'postgres'
 	password = 'postgres'
+	cleanDisabled = false
 }
 
 repositories {
@@ -46,8 +47,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.flywaydb:flyway-core:10.2.0'
-	implementation 'org.flywaydb:flyway-database-postgresql:10.2.0'
+	implementation 'org.flywaydb:flyway-core:9.22.3'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
 	compileOnly 'org.projectlombok:lombok'
